[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/Enemies/bat.png" type="Texture" id=1]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateBase.gd" type="Script" id=2]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Scene/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateLabel.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.74496

[sub_resource type="GDScript" id=4]
script/source = "extends StateBase

#### ACCESSORS ####



#### BUILT-IN ####



#### VIRTUALS ####

func enter_state() -> void:
	owner.wander()


#### LOGIC ####



#### INPUTS ####



#### SIGNAL RESPONSES ####
"

[sub_resource type="GDScript" id=5]
script/source = "extends StateBase

#### ACCESSORS ####

func is_class(value: String): return value == \"\" or .is_class(value)
func get_class() -> String: return \"\"


#### BUILT-IN ####

func _ready() -> void:
	pass

#### VIRTUALS ####



#### LOGIC ####

func enter_state() -> void:
	$AttackCooldown.start()


#### INPUTS ####



#### SIGNAL RESPONSES ####
"

[sub_resource type="CircleShape2D" id=2]
radius = 74.2442

[sub_resource type="CircleShape2D" id=3]
radius = 308.535

[node name="Bat" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StatesMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Wander" type="Node" parent="StatesMachine"]
script = SubResource( 4 )

[node name="WaitTimer" type="Timer" parent="StatesMachine/Wander"]
one_shot = true

[node name="Chase" type="Node" parent="StatesMachine"]
script = ExtResource( 2 )

[node name="ChasePathUpdateTimer" type="Timer" parent="StatesMachine/Chase"]
wait_time = 0.05

[node name="Attack" type="Node" parent="StatesMachine"]
script = SubResource( 5 )

[node name="AttackCooldown" type="Timer" parent="StatesMachine/Attack"]
wait_time = 2.0
one_shot = true

[node name="StateLabel" type="Label" parent="StatesMachine"]
margin_left = -20.6017
margin_top = -29.217
margin_right = 19.3983
margin_bottom = -15.217
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AggroArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ViewFieldArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewFieldArea"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="path_finished" from="." to="." method="_on_Bat_path_finished"]
[connection signal="timeout" from="StatesMachine/Wander/WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="StatesMachine/Chase/ChasePathUpdateTimer" to="." method="_on_ChasePathUpdateTimer_timeout"]
[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
[connection signal="body_exited" from="ViewFieldArea" to="." method="_on_ViewFieldArea_body_exited"]
